# BabylonNative

./: CMakeLists.txt  CMakePresets.json  package-lock.json
Apps/: CMakeLists.txt  package-lock.json  package.json
Apps/HeadlessIntegrationTest/: CMakeLists.txt
Apps/HeadlessIntegrationTest/Scripts/: index.js
Apps/HeadlessIntegrationTest/Source/: App.cpp
Apps/IntegrationTest/: CMakeLists.txt
Apps/IntegrationTest/Scripts/: package-lock.json  package.json  tsconfig.json  webpack.config.js
Apps/IntegrationTest/Scripts/lib/: factoryInterop.d.ts  index.d.ts  lighting.d.ts  rendererInterop.d.ts  sceneContext.d.ts  sceneInterop.d.ts  viewportMaterialPlugin.d.ts
Apps/IntegrationTest/Scripts/src/: factoryInterop.ts  index.ts  lighting.ts  rendererInterop.ts  sceneContext.ts  sceneInterop.ts  viewportMaterialPlugin.ts
Apps/IntegrationTest/Source/: App.cpp  BabylonRenderer.cpp  BabylonRenderer.h  MathTypes.h  OrbitCamera.h  RenderDocCapture.h
Apps/IntegrationTestApp/: CMakeLists.txt
Apps/IntegrationTestApp/Source/: BabylonMath.h  BabylonRenderer.cpp  BabylonRenderer.h  BabylonRendererImpl_Shared.h  GraphicsDebug.h  PlatformUtils.h  main.cpp
Apps/IntegrationTestApp/src/: GraphicsDebug.h  babylonRenderer.cpp  babylonRenderer.h  main.cpp
Apps/Playground/: CMakeLists.txt
Apps/Playground/Android/BabylonNative/: CMakeLists.txt
Apps/Playground/Android/app/src/main/: AndroidManifest.xml
Apps/Playground/Android/app/src/main/cpp/: BabylonNativeJNI.cpp
Apps/Playground/Scripts/: config.json  experience.js  validation_native.js
Apps/Playground/Win32/: App.cpp  App.h
Apps/ValidationTests/Scripts/: config.json
Core/AppRuntime/Source/: AppRuntime_Napi-c-external.cpp
Core/Graphics/Include/RendererType/D3D11/Babylon/Graphics/: RendererType.h
Core/Graphics/Include/Shared/Babylon/Graphics/: Device.h
Core/Graphics/InternalInclude/Babylon/Graphics/: BgfxCallback.h
Core/Graphics/Source/: Device.cpp  DeviceImpl.cpp  DeviceImpl.h
Dependencies/: CMakeLists.txt
Dependencies/UrlLib/Source/: UrlRequest_Windows.cpp
Dependencies/napi/napi-c-external/: CMakeLists.txt
Dependencies/napi/napi-c-external/source/: env.cc  env_external.cc
Dependencies/v8inspector/Source/: V8InspectorAgent.cpp
Install/: Install.cmake
Plugins/: CMakeLists.txt
Plugins/ExternalTexture/Source/: ExternalTexture_D3D11.cpp
Plugins/NativeEngine/: CMakeLists.txt
Plugins/NativeEngine/Source/: NativeEngine.cpp  NativeEngine.h  ResourceLimits.cpp  ResourceLimits.h  ShaderCompilerD3D.h  ShaderCompilerTraversers.cpp  TextureCopyHelper.cpp  TextureCopyHelper.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
Plugins/NativeOptimizations/Source/: NativeOptimizations.cpp
Plugins/TestUtils/: CMakeLists.txt
Plugins/TestUtils/Source/: TestUtils.h
Plugins/TestUtils/Source/Graphics/: TestUtilsImpl_D3D11.cpp
Plugins/TestUtils/Source/Win32/: TestUtilsImpl.cpp
Plugins/USDImporter/: CMakeLists.txt
Plugins/USDImporter/Include/Babylon/Plugins/: USDImporter.h
Plugins/USDImporter/Source/: USDImporter.cpp  USDImporter.h
Polyfills/Canvas/Source/Shaders/dxbc/: fs_boxblur.h  fs_gaussblur.h  fs_nanovg_fill.h  vs_fspass.h  vs_nanovg_fill.h
Polyfills/Canvas/Source/Shaders/dxil/: fs_boxblur.h  fs_gaussblur.h  fs_nanovg_fill.h  vs_fspass.h  vs_nanovg_fill.h
Polyfills/Canvas/Source/Shaders/wgsl/: fs_boxblur.h  fs_gaussblur.h  fs_nanovg_fill.h  vs_fspass.h  vs_nanovg_fill.h
Polyfills/Canvas/Source/nanovg/: nanovg_babylon.cpp  nanovg_filterstack.cpp
Tools/: CMakeLists.txt
Tools/ShaderProcessor/: CMakeLists.txt
Tools/ShaderProcessor/Include/Babylon/ShaderProcessor/: IShaderProcessor.h  ProcessingOptions.h  ShaderCodeConditionNode.h  ShaderCodeCursor.h  ShaderCodeInliner.h  ShaderCodeNode.h  ShaderCodeTestNode.h  ShaderProcessor.h  StringUtils.h  WebGL2ShaderProcessor.h
Tools/ShaderProcessor/Include/Babylon/ShaderProcessor/Expressions/: ShaderDefineExpression.h
Tools/ShaderProcessor/Include/Babylon/ShaderProcessor/Expressions/Operators/: ShaderDefineAndOperator.h  ShaderDefineArithmeticOperator.h  ShaderDefineIsDefinedOperator.h  ShaderDefineOrOperator.h
Tools/ShaderProcessor/Source/: ShaderCodeNode.cpp  ShaderDefineExpression.cpp  ShaderProcessor.cpp  WebGL2ShaderProcessor.cpp
Tools/ShaderTranspiler/: CMakeLists.txt  package-lock.json  package.json
Tools/ShaderTranspiler/Scripts/: experience.js
Tools/ShaderTranspiler/Source/: ResourceLimits.cpp  ResourceLimits.h  ShaderCompiler.h  ShaderCompilerCommon.cpp  ShaderCompilerCommon.h  ShaderCompilerD3D.h  ShaderCompilerTraversers.cpp  ShaderCompilerTraversers.h  main.cpp
